# rs-jsons2arrow-ipc-stream

./: Cargo.toml  README.md  example.sh  rs-jsons2arrow-ipc-stream  rs-jsons2arrow-ipc-stream.wasm
src/: lib.rs  main.rs
