[package]
name = "rs-jsons2arrow-ipc-stream"
version = "0.1.0"
edition = "2024"

description = "Converts the json lines to an arrow ipc stream."
license = "Apache-2.0"
repository = "https://github.com/takanoriyanagitani/rs-jsons2arrow-ipc-stream"
homepage = "https://github.com/takanoriyanagitani/rs-jsons2arrow-ipc-stream"
documentation = "https://docs.rs/rs-jsons2arrow-ipc-stream/latest"
keywords = ["arrow", "ipc", "stream", "json"]

exclude = [
	"rs-jsons2arrow-ipc-stream.wasm",
	"rs-jsons2arrow-ipc-stream",
]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 16

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.arrow]
version = "57"
default-features = false
features = [
	"ipc",
	"json",
]
